tests/ui/nll/closure-requirements/thread_scope_incorrect_implied_bound.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/thread_scope_incorrect_implied_bound.rs:17:47
   |
LL |     takes_closure_implied_bound(|proof| proof.outlives_hr::<T>());
   |                                               ^^^^^^^^^^^
   |                                               |
   |                                               the parameter type `T` must be valid for the static lifetime...
   |                                               ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn requires_external_outlives_hr<T: 'static>() {
   |                                   +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
